--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -30,7 +30,7 @@
       href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Edu+NSW+ACT+Foundation&family=Josefin+Sans:wght@300;400&family=Merriweather:wght@300;400&family=Open+Sans:wght@300&family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>My Notes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
